# kemono-pinger

./: Cargo.toml  README.md  config.default.toml  flake.nix
nix/: module.nix  package.nix
src/: main.rs
src/bot/: manager.rs  mod.rs  notifier.rs  requester.rs
src/utils/: config.rs  gunzip.rs  mod.rs
