[package]
name = "kemono-pinger"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.51", features = ["derive"] }
colog = "1.4.0"
colored = "3.0.0"
easy-config-store = "0.2.2"
env_logger = "0.11.8"
eyre = "0.6.12"
flate2 = "1.1.5"
log = "0.4.28"
reqwest = "0.12.24"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serenity = "0.12.4"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
url = { version = "2.5.7", features = ["serde"] }
